# python-flask-gestao-imobiliaria

./: .dockerfile  .dockerignore  .env  .gitignore  Dockerfile  LICENSE  add_initial_data.py  fly.toml  main.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
data/: .~lock.contrato.xlsx#  contrato.xlsx  imovel.xlsx  locador.xlsx  locatario.xlsx
database/: gestao_imobiliaria.sqlite  schema.sql
gestao_imobiliaria/: __init__.py  db.py  forms.py  views.py
gestao_imobiliaria/templates/: base.html  form.html  home.html  list.html
gestao_imobiliaria/views/: __init__.py  contrato.py  imovel.py  index.py  locador.py  locatario.py  utils.py
