[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestao_ambiental"
description = "Django Gestao Ambiental"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "flask",
    "python-dotenv",
    "gunicorn"
]

[project.optional-dependencies]
dev = ["ruff", "pip-tools"]

[tool.setuptools.dynamic]
version = { attr = "gestao_imobiliaria.version.__version__" }

[tool.setuptools]
py-modules = []

[tool.ruff.format]
exclude = ["*.pyi"]